k8s/apps/http-dump/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-dump
    app.kubernetes.io/name: http-dump
  name: http-dump
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-dump
      app.kubernetes.io/name: http-dump
  template:
    metadata:
      labels:
        app: http-dump
        app.kubernetes.io/name: http-dump
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: OTEL_EXPORTER_OTLP_INSECURE
              value: "true"
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://default-collector.opentelemetry-collector.svc.cluster.local:4317
          image: ghcr.io/walnuts1018/http-dump:2940b4a2f1f5f4fdfd6c41e6dd2d8c456837f3e1-46@sha256:f8feacfb9901c05e2cf076b3936aaaaea9945626d6781d80ebb77452a76feb91
          name: http-dump
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: "0"
              memory: 10Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
      tolerations:
        - key: node.walnuts.dev/low-performance
          operator: Exists
