k8s/apps/http-dump/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-dump
  labels:
    app: http-dump
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: http-dump
  type: ClusterIP
