k8s/apps/http-dump/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    labels:
        app: http-dump
        app.kubernetes.io/name: http-dump
    name: http-dump
    namespace: default
spec:
    ingressClassName: cilium
    rules:
        - host: httptest.walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: http-dump
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix

---
