k8s/apps/http-dump/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: http-dump
  namespace: default
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 4317
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.default
              app.kubernetes.io/name: default-collector
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
          podSelector:
            matchLabels:
              app.kubernetes.io/component: interceptor
              app.kubernetes.io/instance: keda-http-addon
              app.kubernetes.io/name: http-add-on
              app.kubernetes.io/part-of: keda-add-ons-http
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app: http-dump
      app.kubernetes.io/name: http-dump
  policyTypes:
    - Ingress
    - Egress
